# transcript-to-chat

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
tests/: test_chunking.py  test_llm.py  test_vectorstore.py  test_youtube.py
utils/: chunking.py  dialogs.py  llm.py  vectorestore.py  youtube.py
