[project]
name = "rag-playground"
version = "0.1.0"
description = "Interactive demonstration of a simple RAG system"
authors = [
    {name = "Ben Nolan",email = "bcnolan34@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "streamlit (>=1.52.2,<2.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-groq (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "youtube-transcript-api (>=1.2.3,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "chromadb (>=1.3.7,<2.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]

[tool.ruff]
lint.select = ["E", "F", "I"]
fix = true
line-length = 88

[tool.pytest.ini_options]
testpath = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "streamlit.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true